modified about page and fixed error with navbar sizing on small windows.

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -16,6 +16,8 @@ body {
   padding: 0;
   background-color: #90a158;
   overflow-x: hidden;
+  width:100%;
+ 
 }
 .absoluteFooter{
   position: fixed;
@@ -181,8 +183,9 @@ body {
   justify-content: left;
   align-items: left;
   display:grid;
-  grid-template-columns:500px 400px;
+  grid-template-columns:500px 300px;
   grid-template-rows: 100%;
+  /*display:flex;*/
   
   
   
@@ -193,10 +196,11 @@ body {
 .mainTitle{
   font-size: 70px;
   color:antiquewhite;
-  overflow:hidden;
-  text-wrap:nowrap;
+  overflow-x:hidden;
+  text-wrap: nowrap;
   padding:0;
-  margin-right: 0;
+  margin-right: 0px;
+  margin-left:10px;
   
 
   
@@ -234,7 +238,7 @@ body {
   font-family: Arial, Helvetica, sans-serif;
   font-size: 25px;
   box-sizing: border-box;
-  overflow-x: hidden;
+  overflow-x:scroll;
 }
 
 
@@ -281,4 +285,31 @@ body {
   text-align: center;
   max-width: 90%;
   overflow-wrap: break-word;
+}
+
+/*ABOUT PAGE*/
+.aboutContainer{
+  text-align:center;
+  width:700px;
+  color: antiquewhite;
+  background-color: #114723;
+  margin-top:50px;
+}
+.aboutHeader{
+  font-family: Century Gothic, CenturyGothic, AppleGothic, sans-serif;
+  font-size:40px
+}
+.aboutPara{
+  font-family:Arial, Helvetica, sans-serif;
+  margin:5px;
+  font-size: 17px;
+  line-height: 25px;
+}
+.courseTitle{
+  font-style: italic;
+  text-decoration: underline;
+}
+.whenPublished{
+  font-family:Arial, Helvetica, sans-serif;
+  font-size: small;
 }
